🐛 Fix: wrong z-index on some UI elements

--- a/css/style.scss
+++ b/css/style.scss
@@ -73,6 +73,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 #uidiv > div {
